fix: delayed grid resize and column value overspill

--- a/packages/web-console/src/styles/_grid.scss
+++ b/packages/web-console/src/styles/_grid.scss
@@ -186,6 +186,7 @@ $visible-drag-handle-margin: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: right;
+  margin-left: $visible-drag-handle-margin + 1;
 }
 
 .qg-hover .qg-c:hover, .qg-r-active .qg-c:hover, .qg-c-active {
